kubernetes/flashcards-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashcards-service
spec:
  selector:
    app: flashcards-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flashcards-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flashcards-app
  template:
    metadata:
      labels:
        app: flashcards-app
    spec:
      containers:
        - name: flashcards-app
          image: mateycardula18/flashcards:latest
          ports:
            - containerPort: 8080
